[package]
name = "RustConnect"
build="build.rs"
version = "1.0.1"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xcap = "0.5"
image = "0.25"
reqwest = { version = "0.11", features = ["blocking"] }
device_query = "1.1"
base64 = "0.22"
once_cell = "1.19"
webbrowser = "1.0"
urlencoding = "2.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
